tg-7764 Agregar diseño menu lateral izquierdo colapsable

--- a/front-end/apps/projects/hospital/src/app/modules/institucion/institucion.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/institucion/institucion.component.html
@@ -14,6 +14,12 @@
 			[userInfo]="userInfo"
 			[routerLink]="userProfileLink"
 		></app-user-badge>
+		<app-user-badge
+			account-info-min
+			[collapsed]="true"
+			[userInfo]="userInfo"
+			[routerLink]="userProfileLink"
+		></app-user-badge>
 	</app-main-layout>
 </ng-container>
 <ng-template #loading>
