--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/content-title/content-title.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/content-title/content-title.component.html
@@ -1,6 +1,6 @@
 <section>
 	<h2 class="page-title">
 		<mat-icon>{{title.icon}}</mat-icon>
-		<app-label [label]="title.label"></app-label>
+		<app-label [hidden]="collapsed" [label]="title.label"></app-label>
 	</h2>
 </section>
