--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -256,6 +256,14 @@
 							<app-card-indicaciones [patientId]="patientId" *ngIf="false"></app-card-indicaciones>
 						</ng-template>
 					</mat-tab>
+					<mat-tab id="tab_nursing" *ngIf="hasInternmentEpisodeInThisInstitution">
+						<ng-template mat-tab-label>
+							<span>{{ 'ambulatoria.paciente.nursing.TAB_LABEL' | translate | uppercase }}</span>
+						</ng-template>
+						<ng-template matTabContent>
+							<app-nursing-care></app-nursing-care>
+						</ng-template>
+					</mat-tab>
 					<mat-tab id="tab_problemas" *ngIf="!(hasPicturesStaffRole || hasLaboratoryStaffRole || hasPharmacyStaffRole)">
 						<ng-template mat-tab-label>
 							<span>{{ 'ambulatoria.paciente.problemas.TAB_LABEL' | translate | uppercase }}</span>
