--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/block-agenda-range/block-agenda-range.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/block-agenda-range/block-agenda-range.component.html
@@ -6,7 +6,7 @@
 
 		<mat-tab label="BLOQUEAR">
 			<form [formGroup]="blockForm">
-				<app-date-range-time-form formControlName="control"></app-date-range-time-form>
+				<app-date-range-time-form [selectedAgenda]="data.selectedAgenda" formControlName="control"></app-date-range-time-form>
 				<div align="end">
 					<button mat-flat-button color="primary" class="uppercase" [disabled]="!blockForm.valid"
 						(click)="block()" id="confirm-button">CONFIRMAR</button>
@@ -16,7 +16,7 @@
 
 		<mat-tab label="DESBLOQUEAR">
 			<form [formGroup]="unblockForm">
-				<app-date-range-time-form formControlName="control"></app-date-range-time-form>
+				<app-date-range-time-form [selectedAgenda]="data.selectedAgenda" formControlName="control"></app-date-range-time-form>
 				<div align="end">
 					<button mat-flat-button color="primary" class="uppercase" [disabled]="!unblockForm.valid"
 						(click)="unblock()" id="confirm-button">CONFIRMAR</button>
