tg-7804 [Mejora] Falta boton VER HISTORIA CLINICA en card paciente

--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/personal-information/personal-information.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/personal-information/personal-information.component.html
@@ -2,7 +2,7 @@
 	<span class="noInformation">Sin Información</span>
 </ng-template>
 <div fxLayout="row" class="form-row" *ngIf="showButtonGoToMedicalHistory">
-	<button  *appHasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO', 'ESPECIALISTA_EN_ODONTOLOGIA']" mat-raised-button color="primary" (click)="buttonIsPressedGoToMedicalHistory()">
+	<button  *appHasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO', 'ESPECIALISTA_EN_ODONTOLOGIA', 'PERSONAL_DE_IMAGENES', 'PERSONAL_DE_LABORATORIO']" mat-raised-button color="primary" (click)="buttonIsPressedGoToMedicalHistory()">
 		<span class="uppercase" [translate]="'ambulatoria.paciente.profile.BUTTON_HISTORIA_CLINICA'"></span>
 	</button>
 </div>
