tg-7593 [FE] Desplegar fechas con agenda disponible para ese profesional

--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/datepicker/datepicker.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/datepicker/datepicker.component.html
@@ -2,7 +2,8 @@
 	<span class="title">{{title | translate}}</span>
 	<form [formGroup]="form">
 		<mat-form-field appearance="outline">
-			<input matInput [min]="minDate" [matDatepicker]="datepicker" formControlName="selectedDate" readonly (dateChange)="changeDate()">
+			<input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="datepicker" [matDatepickerFilter]="dateFilter"
+				formControlName="selectedDate" readonly (dateChange)="changeDate()" >
 			<mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
 			<mat-datepicker #datepicker>
 				<mat-datepicker-actions>
