tg-7765 [FE] Agrega la visualización de las tomas

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/indicacion-mixins.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/indicacion-mixins.scss
@@ -1,7 +1,9 @@
 @import "components/internment-indications-card/internment-indications-card-theme.scss";
 @import "components/item-prescripciones/item-prescripciones.component.scss-theme";
+@import "components/nursing-record/nursing-record.component.scss-theme.scss";
 
 @mixin indicacion-mixins($theme) {
 	@include app-internment-indications-card($theme);
 	@include app-item-prescripciones($theme);
+	@include app-nursing-record($theme);
 }
