tg-7773 Agregar icono para la intitucion

--- a/front-end/apps/projects/hospital/src/app/modules/institucion/institucion.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/institucion/institucion.component.html
@@ -2,6 +2,15 @@
 
 	<app-main-layout [menuItems]="menuItems">
 		<app-location-badge
+			location-info-min
+			[collapsed]="true"
+			[location]="institution"
+			[routerLink]="institutionHomeLink"
+			routerLinkActive="headers-card-background"
+			[routerLinkActiveOptions]="{exact: true}"
+			[roles]="roles"
+		></app-location-badge>
+		<app-location-badge
 			location-info
 			[location]="institution"
 			[routerLink]="institutionHomeLink"
