tg-7608 [FE] Mostrar dropdown de horarios disponibles para esa fecha

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
@@ -163,19 +163,19 @@
 					[minDate]="startAgenda"
 					[maxDate]="endAgenda"
 					[dateToSetInDatepicker]="params.appointmentData.date"
-					[availableDays]="availableDays">
+					[availableDays]="availableDays"
+					(selectDate)="setPossibleScheduleHours($event)">
 				</app-datepicker>
 
 				<div fxLayout="row" >
-					<mat-form-field appearance="outline" class="hour">
-						<mat-select formControlName="hour">
-							<mat-option [value]="params.appointmentData.date | date:'H:mm'">
-							</mat-option>
-						</mat-select>
-					</mat-form-field>
-
+						<mat-form-field appearance="outline" class="hour">
+							<mat-select formControlName="hour">
+								<mat-option [value]="possibleScheduleHour" *ngFor="let possibleScheduleHour of possibleScheduleHours">
+									{{ possibleScheduleHour | date:'shortTime' }}
+								</mat-option>
+							</mat-select>
+						</mat-form-field>
 					<span class="hs"> hs.</span>
-	
 					<div class="confirm-buttons" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="15px" fxFlex="60%">
 						<button mat-stroked-button color="primary" btn-block type="button" (click)="dateFormToggle()">
 							<span [translate]="'turnos.appointment.CANCEL'"></span>
