--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.scss
@@ -168,11 +168,12 @@ section {
 	.date{
 		width: 276px;
 	}
-	
+
 	.hour{
-		width: 99px;
+		width: 90px;
+		height: 50px;
 	}
-	
+
 	.hs{
 		height: fit-content;
 		margin-top: 20px;
