tg-7787 [FE] Ocultar boton para estados distintos de asignado

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
@@ -150,7 +150,7 @@
 						 <span class="mat-body subtitle-size"> {{params.appointmentData.date | date:"H:mm"}} hs</span> 
 					</div>
 				</div>
-				<button type="button" mat-icon-button color="primary" 
+				<button type="button" mat-icon-button color="primary" *ngIf="estadoSelected === appointmentStatesIds.ASSIGNED"
 					(click)="dateFormToggle(); setDisableDays(); setPossibleScheduleHours(params.appointmentData.date)">
 					<mat-icon class="material-icons-outlined">edit</mat-icon>
 					<span class="mat-body strong-size">
